# Back-end-Python-Web-PhotoShare

./: .gitignore  Dockerfile  README.md  auth.py  entrypoint.sh  main.py  pyproject.toml  pytest.ini  qr.html  rating.py  rating_repository.py
migrations/versions/: 00469211bf87_model_post_location_added.py  5dd2d815601e_initial_migration.py  6733f5872091_add_is_deleted_to_comments.py  749eda731024_initial.py  8eb0555cdd5b_add_image_url_to_posts_remove_is_valid_.py  ab89f2e767dc_initial_migration.py  e7bc9eb501a6_revoke_at_added.py  ef4fb5a7888b_model_post_location_added_second_time.py
src/: dependencies.py  main.py
src/conf/: config.py
src/core/: database.py  dependencies.py  security.py
src/database/: db.py
src/entity/: models.py
src/middlewares/: role_checker.py
src/repositories/: admin_comment_repository.py  admin_search_repository.py  admin_user_repository.py  comment_repository.py  edit_profile.py  post_repository.py  rating_repository.py  search_filter.py  user_repository.py  users.py
src/routes/: admin_route.py  admin_search.py  auth.py  comment_route.py  post_route.py  rating_route.py  search_filter.py  user.py
src/schemas/: admin_search.py  auth_schemas.py  comment.py  fake_user_schema_by_pavlo.py  post.py  rating.py  search_filter.py  user.py  user_schema.py  user_schema_for_admin_page.py  (+1 more)
tests/: conftest.py  test_admin_routes.py  test_admin_routes_by_pavlo.py  test_admin_search.py  test_auth.py  test_auth_service.py  test_cloudinary_qr_service.py  test_comment_routes.py  test_post_routes.py  test_ratings.py  test_security.py  test_users.py
(+9 files in other folders)
